--- a/.github/workflows/byocar-sample-app.yml
+++ b/.github/workflows/byocar-sample-app.yml
@@ -1,4 +1,4 @@
-name: mime-types
+name: byocar-sample-app
 
 on: 
   workflow_dispatch:
@@ -13,14 +13,15 @@ jobs:
       - name: Checkout project
         uses: actions/checkout@v3
         with:
-          repository: 'tsteenbe/mime-types'
+          repository: tsteenbe/BYOCAR-sample-app
+          ref: 63c3ec302a6775ed782a4582bc9671638d1782f2
       - name: Run GitHub action for ORT
         uses: tsteenbe/ort-ci-github-action@rc
         with:
-          sw-name: 'Mime Types'
-          sw-version: '2.1.26'
+          sw-name: 'BRING-YOUR-OWN-CAR (BYOCAR) Sample App'
+          sw-version: '1.0.0'
           db-url: ${{ secrets.POSTGRES_URL }}
           db-username: ${{ secrets.POSTGRES_USERNAME }}
           db-password: ${{ secrets.POSTGRES_PASSWORD }}
           allow-dynamic-versions: 'true'
-          # ort-cli-analyze-args: '-l project=oss-project'
+          ort-cli-analyze-args: '-l project=oss-project'
