--- a/.github/workflows/sechub.yml
+++ b/.github/workflows/sechub.yml
@@ -1,4 +1,4 @@
-name: mime-types
+name: SecHub
 
 on: 
   workflow_dispatch:
@@ -13,14 +13,15 @@ jobs:
       - name: Checkout project
         uses: actions/checkout@v3
         with:
-          repository: 'tsteenbe/mime-types'
+          repository: 'mercedes-benz/sechub'
+          ref: '2634b405438169b2ad5828909d5671cd3457a075'
       - name: Run GitHub action for ORT
         uses: tsteenbe/ort-ci-github-action@rc
         with:
-          sw-name: 'Mime Types'
-          sw-version: '2.1.26'
+          sw-name: 'SecHub'
+          sw-version: '0.36.0'
           db-url: ${{ secrets.POSTGRES_URL }}
           db-username: ${{ secrets.POSTGRES_USERNAME }}
           db-password: ${{ secrets.POSTGRES_PASSWORD }}
           allow-dynamic-versions: 'true'
-          # ort-cli-analyze-args: '-l project=oss-project'
+          ort-cli-analyze-args: '-l project=oss-project'
